src/objects/inscor__Employee_Skill__c.object
<CustomObject>
    <fields>
        <fullName>inscor__Conversion_ID__c</fullName>
        <label>Conversion ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>inscor__Employee__c</referenceTo>
        <relationshipLabel>Employee Skills</relationshipLabel>
        <relationshipName>Employee_Skills</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__External_Reference_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Reference ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>inscor__Skill__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Skill</label>
        <referenceTo>inscor__Skill__c</referenceTo>
        <relationshipLabel>Employee Skills</relationshipLabel>
        <relationshipName>Employee_Skills</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Employee Skill</label>
    <nameField>
        <displayFormat>SKID-{0}</displayFormat>
        <label>Employee Skill ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Skills</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>inscor__Company_Different</fullName>
        <active>true</active>
        <errorConditionFormula>inscor__Skill__r.inscor__Company__c != NULL &amp;&amp; inscor__Employee__r.inscor__Company__c !=  inscor__Skill__r.inscor__Company__c</errorConditionFormula>
        <errorMessage>Employee and Skill should be from same company.</errorMessage>
    </validationRules>
</CustomObject>